lab5 done
